# mail_grep

./: .gitignore  AGENTS.md  CODE_GUIDE.md  README.md  hit_line.py  hit_report.py  mail_folder.py  mail_grep.py  mail_message.py  mail_profile.py  mail_string_utils.py  mbox_classifier.py  search_pattern.py  setup.cfg  smart_logging.py
docs/: CODE_GUIDE.md
tests/corpus/: attachment.emlx  broken_header.emlx  encoded_headers.emlx  html_multipart.emlx  html_only.emlx  multi_hit.emlx  no_date.emlx  non_utf8_body.emlx  plain_utf8.emlx  prefixed_size.emlx
