[metadata]
name = mail_grep
version = 0.1.0
description = Email parser using BeautifulSoup and email module
author = Shinya Ohtani
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    beautifulsoup4
